--- a/index3.html
+++ b/index3.html
@@ -38,7 +38,7 @@
             <div class="row">
               <div class="input-field col s6">
                 <input placeholder="Usuario" id="usuario" name="usuario"  type="text" class="validate">
-                <label for="first_name">Nomre de usuario</label>
+                <label for="first_name">Nombre de usuario</label>
               </div>
             <div class="input-field col s6">
               <input placeholder="Contraseña" id="contrasena" type="password" name="contrasena" class="validate">
